test/testData/parser/negative/statements/switch.err
test/testData/parser/negative/statements/switch.c:12:3: error: duplicate case value '4'
test/testData/parser/negative/statements/switch.c:14:3: error: duplicate case value '5'
test/testData/parser/negative/statements/switch.c:16:3: error: duplicate case value '6'
test/testData/parser/negative/statements/switch.c:18:3: error: multiple default labels in one switch
test/testData/parser/negative/statements/switch.c:34:3: error: duplicate case value '-100'
test/testData/parser/negative/statements/switch.c:37:3: error: duplicate case value '-98'
test/testData/parser/negative/statements/switch.c:46:3: error: 'case' statement not in switch statement
test/testData/parser/negative/statements/switch.c:51:3: error: 'case' statement not in switch statement
test/testData/parser/negative/statements/switch.c:59:3: error: 'default' statement not in switch statement
test/testData/parser/negative/statements/switch.c:65:11: error: statement requires expression of integer type ('float' invalid)
test/testData/parser/negative/statements/switch.c:66:15: warning: expression result unused
test/testData/parser/negative/statements/switch.c:74:11: error: statement requires expression of integer type ('STRUCT SX' invalid)
test/testData/parser/negative/statements/switch.c:75:15: warning: expression result unused
test/testData/parser/negative/statements/switch.c:81:11: error: statement requires expression of integer type ('*signed int' invalid)
test/testData/parser/negative/statements/switch.c:82:15: warning: expression result unused
